pxc/tests/test_11_foreach/fe_arr2.px
namespace fe_arr2;
import test_common "";

import io;

int z;
foreach (int i, string& s : z) { // error
}

